# baba-is-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
baba-is-you/: Node2D.tscn  entity.gdns  gdnlibrary.gdnlib  project.godot
baba-is-you/scenes/: lake-10 tuo doors.tscn  lake-11 jelly throne.tscn  lake-13 burglary.tscn  lake-4 pillar yard.tscn  lake-5 brick wall.tscn  lake-6 lock.tscn  lake-7 novice locksmith.tscn  lake-8 locked in.tscn  lake-9 changeless.tscn  level_01.tscn  level_02.tscn  level_03.tscn  level_04.tscn  level_05.tscn  level_06.tscn  level_07.tscn  level_08.tscn  level_09.tscn  level_10.tscn  level_list.tscn  lose_screen.tscn  title_screen.tscn  win_screen.tscn
baba-is-you/scenes/levels/: base_level.tscn  level_01.tscn  level_02.tscn  level_03.tscn  level_04.tscn  level_05.tscn  level_06.tscn  level_07.tscn  level_08.tscn  level_09.tscn  level_10.tscn  level_11.tscn  level_12.tscn  level_13.tscn  level_14.tscn  level_15.tscn  level_16.tscn  level_17.tscn  level_18.tscn  level_19.tscn
baba-is-you/scripts/: back_button.gd  character_entity.gdns  directional_entity.gdns  level_controller.gdns  level_list.gd  spawn_entity.gd  text_entity.gdns  title_screen.gd
baba-is-you/sprites/: baba.tscn  baba_text.tscn  is_text.tscn  logo_0.png.import  logo_1.png.import  logo_2.png.import  skull.tscn  skull_text.tscn  sprites.png.import  you_text.tscn
baba-is-you/sprites/character/: baba.tscn  character.tscn  keke.tscn  me.tscn  robot.tscn
baba-is-you/sprites/character/frames/: baba_frames.tres  base_frames.tres  keke_frames.tres  me_frames.tres  robot_frames.tres
baba-is-you/sprites/directional/: bird.tscn  bolt.tscn  bug.tscn  cog.tscn  crab.tscn  directional.tscn  ghost.tscn  rocket.tscn  skull.tscn
baba-is-you/sprites/directional/frames/: base_frames.tres  bird_frames.tres  bolt_frames.tres  bug_frames.tres  cog_frames.tres  crab_frames.tres  ghost_frames.tres  rocket_frames.tres  skull_frames.tres
baba-is-you/sprites/static/: box.tscn  door.tscn  flag.tscn  grass.tscn  hedge.tscn  jelly.tscn  key.tscn  lava.tscn  love.tscn  pillar.tscn  rock.tscn  star.tscn  static.tscn  wall.tscn  water.tscn
baba-is-you/sprites/text/: and_text.tscn  baba_text.tscn  bird_text.tscn  bolt_text.tscn  box_text.tscn  bug_text.tscn  cog_text.tscn  crab_text.tscn  defeat_text.tscn  door_text.tscn  fall_text.tscn  flag_text.tscn  float_text.tscn  ghost_text.tscn  grass_text.tscn  has_text.tscn  hedge_text.tscn  hot_text.tscn  is_text.tscn  jelly_text.tscn  keke_text.tscn  key_text.tscn  lava_text.tscn  love_text.tscn  me_text.tscn  melt_text.tscn  more_text.tscn  move_text.tscn  not_text.tscn  on_text.tscn  open_text.tscn  pillar_text.tscn  pull_text.tscn  push_text.tscn  robot_text.tscn  rock_text.tscn  rocket_text.tscn  shut_text.tscn  sink_text.tscn  skull_text.tscn  (+12 more)
src/: character_entity.h  condition.cpp  condition.h  directional_entity.h  entity.cpp  entity.h  entity_name_and_type.hpp  enums.h  gdlibrary.cpp  level_controller.cpp  level_controller.h  property.cpp  property.h  rule.cpp  rule.h  rule_parser.cpp  rule_parser.h  text_entity.cpp  text_entity.h  utils.h  vector2.h  words.h
src/grammar/: BabaIsYouLexer.g4  BabaIsYouParser.g4
